--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.2",
+    "babel-install": "^2.1.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.3",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
